--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -85,6 +85,7 @@
     <ClCompile Include="Events\EventSystem.cpp" />
     <ClCompile Include="Events\ObjectEventManager.cpp" />
     <ClCompile Include="Events\OEvent.cpp" />
+    <ClCompile Include="GameEngine\GameEngine.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -97,6 +98,7 @@
     <ClInclude Include="Events\ObjectEventManager.hpp" />
     <ClInclude Include="Events\ODefines.hpp" />
     <ClInclude Include="Events\OEvent.hpp" />
+    <ClInclude Include="GameEngine\GameEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Events\DelegateGlobalFunction.tpp" />
