--- a/ASSB/ASSB/ASSB.vcxproj
+++ b/ASSB/ASSB/ASSB.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Events\ObjectEventManager.cpp" />
     <ClCompile Include="Events\OEvent.cpp" />
     <ClCompile Include="GameEngine\GameEngine.cpp" />
+    <ClCompile Include="GameEngine\TransformComponent.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -98,7 +99,9 @@
     <ClInclude Include="Events\ObjectEventManager.hpp" />
     <ClInclude Include="Events\ODefines.hpp" />
     <ClInclude Include="Events\OEvent.hpp" />
+    <ClInclude Include="GameEngine\ComponentHandle.h" />
     <ClInclude Include="GameEngine\GameEngine.h" />
+    <ClInclude Include="GameEngine\TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Events\DelegateGlobalFunction.tpp" />
