--- a/ASSB/ASSB/ASSB.vcxproj.filters
+++ b/ASSB/ASSB/ASSB.vcxproj.filters
@@ -143,5 +143,6 @@
       <Filter>Template Files\EventSystem</Filter>
     </None>
     <None Include="GameEngine\ComponentHandle.tpp" />
+    <None Include="GameEngine\GameEngine.tpp" />
   </ItemGroup>
 </Project>
